--- a/package.json
+++ b/package.json
@@ -23,10 +23,18 @@
     "url": "https://github.com/Proskomma/diegesis-server/issues"
   },
   "homepage": "https://github.com/Proskomma/diegesis-server#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
   "dependencies": {
     "apollo-server-express": "^3.6.4",
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "graphql": "^16.3.0"
+    "fs-extra": "^10.0.1",
+    "graphql": "^16.3.0",
+    "jszip": "^3.7.1",
+    "path": "^0.12.7",
+    "proskomma-utils": "^0.4.28"
   }
 }
