--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.6.4",
+    "app-root-path": "^3.0.0",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
