--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.3",
     "fs-extra": "^10.0.1",
     "graphql": "^16.3.0",
+    "helmet": "^5.0.2",
     "jszip": "^3.7.1",
     "path": "^0.12.7",
     "proskomma-utils": "^0.4.28"
