--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql": "^16.3.0",
     "helmet": "^5.0.2",
     "jszip": "^3.7.1",
+    "node-cron": "^3.0.0",
     "path": "^0.12.7",
     "proskomma-utils": "^0.4.28"
   }
