--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "diegesis-server",
-  "version": "0.0.1",
-  "type": "module",
+  "version": "0.1.0",
   "description": "A New Apollo-based Server for Diegesis",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
