Configurable data and static dirs

--- a/debug_config.json
+++ b/debug_config.json
@@ -2,6 +2,7 @@
   "port": 1234,
   "debug": true,
   "useCors": true,
-  "orgs": ["eBible"],
-  "cronFrequency": "1 min"
+  "orgs": [],
+  "cronFrequency": "1 min",
+  "verbose": true
 }
