--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "helmet": "^5.0.2",
     "jszip": "^3.7.1",
     "node-cron": "^3.0.0",
+    "os": "^0.1.2",
     "path": "^0.12.7",
     "proskomma-utils": "^0.4.28"
   },
@@ -49,8 +50,8 @@
     ],
     "globals": {
       "__app__": null,
-      "__server__": null
+      "__server__": null,
+      "__dataDir__": null
     }
   }
 }
-
