--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "proskomma-utils": "^0.4.28",
+    "uw-proskomma": "^0.6.3",
     "xmldom": "^0.6.0"
   },
   "jest": {
