--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
-    "supertest": "^6.2.2"
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "apollo-server-express": "^3.6.4",
@@ -42,7 +41,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "proskomma-utils": "^0.4.28",
-    "uw-proskomma": "^0.6.3",
+    "uw-proskomma": "^0.6.4",
     "xmldom": "^0.6.0"
   },
   "jest": {
