includeMutations config option closes #6

--- a/debug_config.json
+++ b/debug_config.json
@@ -4,5 +4,6 @@
   "useCors": true,
   "orgs": [],
   "cronFrequency": "1 min",
-  "verbose": true
+  "verbose": true,
+  "includeMutations": true
 }
