--- a/default_config.json
+++ b/default_config.json
@@ -5,5 +5,6 @@
   "useCors": false,
   "orgs": [],
   "cronFrequency": "never",
-  "verbose": false
+  "verbose": false,
+  "includeMutations": false
 }
