Access log closes #4

--- a/debug_config.json
+++ b/debug_config.json
@@ -1,6 +1,8 @@
 {
   "port": 1234,
   "debug": true,
+  "logAccess": false,
+  "logFormat": "dev",
   "useCors": true,
   "orgs": [],
   "cronFrequency": "1 min",
