--- a/default_config.json
+++ b/default_config.json
@@ -2,6 +2,8 @@
   "hostName": "localhost",
   "port": 2468,
   "debug": false,
+  "logAccess": false,
+  "logFormat": "combined",
   "useCors": false,
   "orgs": [],
   "cronFrequency": "never",
