--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql": "^16.3.0",
     "helmet": "^5.0.2",
     "jszip": "^3.7.1",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
