--- a/debug_config.json
+++ b/debug_config.json
@@ -7,5 +7,7 @@
   "orgs": [],
   "cronFrequency": "1 min",
   "verbose": true,
-  "includeMutations": true
+  "includeMutations": true,
+  "staticPath": "C:\\Users\\DELL\\Desktop\\Mark\\whit-git\\diegesis-server-admin-client\\build"
+
 }
