--- a/local/admin_config.json
+++ b/local/admin_config.json
@@ -8,5 +8,5 @@
   "cronFrequency": "1 min",
   "verbose": true,
   "includeMutations": true,
-  "staticPath": "/home/mark/repos/proskomma/diegesis-server-admin-client/build"
+  "staticPath": "C:\\Users\\DELL\\Desktop\\Mark\\whit-git\\diegesis-server-admin-client\\build"
 }
