--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           name: Proskomma/diegesis-server
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           dockerfile: Dockerfile
           tags: ${{ env.DOCKER_TAGS }}
