--- a/apps/diegesis-server/config/debug_config.json
+++ b/apps/diegesis-server/config/debug_config.json
@@ -8,5 +8,6 @@
   "orgs": [],
   "cronFrequency": "1 min",
   "verbose": true,
-  "includeMutations": true
+  "includeMutations": true,
+  "staticPath": "../diegesis-admin-client/build"
 }
