--- a/apps/diegesis-server/package.json
+++ b/apps/diegesis-server/package.json
@@ -4,7 +4,8 @@
   "description": "A New Apollo-based Server for Diegesis",
   "main": "src/index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --testTimeout=30000"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=30000",
+    "start": "node src/index.js config/debug_config.json"
   },
   "repository": {
     "type": "git",
