setting up client-server

--- a/apps/diegesis-server/package.json
+++ b/apps/diegesis-server/package.json
@@ -58,5 +58,13 @@
       "__server__": null,
       "__dataDir__": null
     }
+  },
+  "nx": {
+    "implicitDependencies": ["diegesis-admin-client"],
+    "targets": {
+      "start": {
+        "dependsOn": ["^build"]
+      }
+    }
   }
 }
