Renamed package to user-client

--- a/apps/diegesis-user-client/package.json
+++ b/apps/diegesis-user-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diegesis-admin-client",
+  "name": "diegesis-user-client",
   "version": "0.1.0",
   "private": true,
   "homepage": "/",
