--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - 'diegesis-server'
-      - 'diegesis-user-client'
+      - 'apps/diegesis-server'
+      - 'apps/diegesis-user-client'
       - '!README.md'
 
 jobs:
@@ -27,5 +27,5 @@ jobs:
           name: mvhsolutions/diegesis-server
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          dockerfile: diegesis-server/Dockerfile
+          dockerfile: apps/diegesis-server/Dockerfile
           tags: ${{ env.DOCKER_TAGS }}
