--- a/apps/diegesis-server/package.json
+++ b/apps/diegesis-server/package.json
@@ -43,8 +43,8 @@
     "node-cron": "^3.0.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
+    "proskomma": "^0.9.2",
     "proskomma-utils": "^0.8.2",
-    "uw-proskomma": "^0.8.5",
     "winston": "^3.7.2",
     "xmldom": "^0.6.0"
   },
@@ -60,10 +60,14 @@
     }
   },
   "nx": {
-    "implicitDependencies": ["diegesis-admin-client"],
+    "implicitDependencies": [
+      "diegesis-admin-client"
+    ],
     "targets": {
       "start": {
-        "dependsOn": ["^build"]
+        "dependsOn": [
+          "^build"
+        ]
       }
     }
   }
