--- a/apps/diegesis-server/config/debug_user_config.json
+++ b/apps/diegesis-server/config/debug_user_config.json
@@ -9,5 +9,6 @@
   "cronFrequency": "1 min",
   "verbose": true,
   "includeMutations": true,
-  "staticPath": "../diegesis-user-client/build"
+  "staticPath": "../diegesis-user-client/build",
+  "redirectToRoot": ["/who", "/how", "/list", "/entry/*"]
 }
