Handle spaces in selectors; deleteGenerated option

--- a/apps/diegesis-server/config/debug_user_config.json
+++ b/apps/diegesis-server/config/debug_user_config.json
@@ -10,5 +10,6 @@
   "verbose": true,
   "includeMutations": true,
   "staticPath": "../diegesis-user-client/build",
-  "redirectToRoot": ["/who", "/how", "/list", "/entry/*"]
+  "redirectToRoot": ["/who", "/how", "/list", "/entry/*"],
+  "deleteGenerated": false
 }
