--- a/apps/diegesis-server/config/debug_user_config.json
+++ b/apps/diegesis-server/config/debug_user_config.json
@@ -7,6 +7,7 @@
   "useCors": true,
   "orgs": [],
   "cronFrequency": "1 min",
+  "nWorkers": 2,
   "verbose": true,
   "includeMutations": true,
   "staticPath": "../diegesis-user-client/build",
