--- a/apps/diegesis-user-client/package.json
+++ b/apps/diegesis-user-client/package.json
@@ -12,7 +12,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "crypto": "npm:crypto-browserify",
+    "crypto-browserify": "^3.12.0",
+    "fs": "npm:crypto-browserify",
     "graphql": "^16.3.0",
+    "proskomma-core": "^0.9.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.3",
