--- a/apps/diegesis-admin-client/package.json
+++ b/apps/diegesis-admin-client/package.json
@@ -2,7 +2,7 @@
   "name": "diegesis-admin-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "/admin",
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@emotion/react": "^11.9.0",
