--- a/apps/diegesis-server/package.json
+++ b/apps/diegesis-server/package.json
@@ -45,6 +45,7 @@
     "path": "^0.12.7",
     "proskomma-core": "^0.9.3",
     "proskomma-utils": "^0.8.2",
+    "sha": "^3.0.0",
     "winston": "^3.7.2",
     "xmldom": "^0.6.0"
   },
