--- a/apps/diegesis-user-client/package.json
+++ b/apps/diegesis-user-client/package.json
@@ -17,6 +17,7 @@
     "fs": "npm:crypto-browserify",
     "graphql": "^16.3.0",
     "proskomma-core": "^0.9.6",
+    "proskomma-json-tools": "^0.6.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.3",
