--- a/apps/diegesis-admin-client/package.json
+++ b/apps/diegesis-admin-client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "graphql": "^16.3.0",
+    "js-cookie": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
