--- a/apps/diegesis-server/package.json
+++ b/apps/diegesis-server/package.json
@@ -33,6 +33,7 @@
     "apollo-server-express": "^3.6.4",
     "app-root-path": "^3.0.0",
     "axios": "^1.1.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "fs-extra": "^10.0.1",
