Refresh server salt

--- a/apps/diegesis-server/config/debug_config.json
+++ b/apps/diegesis-server/config/debug_config.json
@@ -9,6 +9,7 @@
   "cronFrequency": "1 min",
   "verbose": true,
   "includeMutations": true,
+  "sessionTimeoutInMins": 1,
   "staticPaths": [
     {
       "path": "../diegesis-admin-client/build",
